--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: 26px;
-        line-height: 1,19;
+        line-height: 1.19;
         /* identical to box height */
         letter-spacing: 0.03em;
         color: #000;}
@@ -24,7 +24,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1,19;
+    line-height: 1.19;
     /* identical to box height */
 
     letter-spacing: 0.03em;
@@ -32,10 +32,11 @@
         }
         /* ---------NAVIGATION--- -- */
 .menu-link {
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: #212121;
 }
@@ -44,7 +45,7 @@
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
-        line-height: 1,14;
+        line-height: 1.14;
         letter-spacing: 0.02em;
         color: #2196F3;
 }
@@ -52,7 +53,7 @@
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
-        line-height: 1,14;
+        line-height: 1.14;
         letter-spacing: 0.02em;
         color: #757575;
 }
@@ -61,7 +62,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: #2196F3;
 }
@@ -74,7 +75,7 @@ background: #2F303A;
         font-style: normal;
         font-weight: 900;
         font-size: 44px;
-        line-height: 1,36;
+        line-height: 1.36;
         /* or 136% */
         text-align: center;
         letter-spacing: 0.06em;
@@ -82,54 +83,52 @@ background: #2F303A;
         color: #FFFFFF;
 }
 .modal-btn{
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1,88;
-    /* identical to box height, or 188% */
-    display: flex;
-     align-items: center; 
-     text-align: center; 
-    letter-spacing: 0.06em;
+    font-family: 'Roboto';
     color: #FFFFFF;
     background: #2196F3;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 1.88;
+        line-height: 30px;
 }
 .modal-btn:hover,
 .modal-btn:focus{
-    position: absolute;
-        visibility: hidden;
-        width: 200px;
-        height: 50px;
-        left: 700px;
-        top: 430px;
+  position: absolute;
+    visibility: hidden;
+    width: 200px;
+    height: 50px;
+    left: 700px;
+    top: 430px;
 }
-.modal-btn-portfolio{
-    /* position: absolute; */
-        width: 73px;
-        height: 38px;
-        left: 495px;
-        top: 174px;
-    
-    background: #F5F4FA;
-}
-.modal-btn-portfolio:hover,
-.modal-btn-portfolio:focus{
-/* position: absolute; */
-    width: 73px;
-    height: 38px;
-    left: 495px;
-    top: 174px;
-    color: #FFFFFF;
-    background: #2196F3;
-}
+
 /* ---------- DESCRIPTION ------ -- */
+.modal-btn-portfolio {
+    font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 26px;
+        /* identical to box height, or 162% */
+    
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+        color: #212121;
+    background: #F5F4FA;
+        border-radius: 4px;
+       
+}
+
+.modal-btn-portfolio:hover,
+.modal-btn-portfolio:focus {
+    
+    color: #FFFFFF;
+    background: #2196F3;}
+
 .points{
         font-style: normal;
         font-weight: 700;
         font-size: 14px;
-        line-height: 1,14;
+        line-height: 1.14;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #212121;
@@ -137,7 +136,7 @@ background: #2F303A;
   .description{
     font-style: normal;
     font-weight: 400;
-    font-size: 1,71;
+    font-size: 1.71;
     line-height: 24px;
     /* or 171% */
     letter-spacing: 0.03em;
@@ -147,7 +146,7 @@ background: #2F303A;
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 1,17;
+        line-height: 1.17;
        /* text-align: center;*/
         letter-spacing: 0.03em;
         color: #212121;
@@ -157,7 +156,7 @@ background: #2F303A;
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 1,17;
+        line-height: 1.17;
         /* text-align: center; */
         letter-spacing: 0.03em;
         color: #212121;
@@ -166,7 +165,7 @@ background: #2F303A;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
-        line-height: 1,19;
+        line-height: 1.19;
         /* identical to box height */
         text-align: center;
         letter-spacing: 0.03em;
@@ -176,7 +175,7 @@ background: #2F303A;
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        line-height: 1,19;
+        line-height: 1.19;
         /* identical to box height */
         text-align: center;
         letter-spacing: 0.03em;
@@ -191,7 +190,7 @@ font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1,19;
+    line-height: 1.19px;
     /* identical to box height */
 
     letter-spacing: 0.03em;
@@ -203,7 +202,7 @@ font-family: 'Raleway';
         font-style: normal;
         font-weight: 700;
         font-size: 26px;
-        line-height: 1,19;
+        line-height: 1.19px;
         /* identical to box height */
     
         letter-spacing: 0.03em;
@@ -213,7 +212,7 @@ font-family: 'Raleway';
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
-        line-height: 1,71;
+        line-height: 1.71;
         /* or 171% */
         letter-spacing: 0.03em;
         color: #FFFFFF;
@@ -244,7 +243,7 @@ font-family: 'Raleway';
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
-            line-height: 1,88;
+            line-height: 1.88;
             /* identical to box height, or 188% */
         
             letter-spacing: 0.03em;
