--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,7 @@ background: #2F303A;
         background: #2F303A;
 }
 .modal-btn{
-    font-family: 'Roboto';
-        font-style: normal;
+    font-style: normal;
         font-weight: 700;
         font-size: 16px;
         line-height: 1.88;
@@ -100,12 +99,7 @@ background: #2F303A;
 }
 .modal-btn:hover,
 .modal-btn:focus{
-/* position: absolute; */
-    width: 200px;
-    height: 50px;
-    left: 700px;
-    top: 430px;
-    background: #2196F3;
+    background: #188CE8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
