--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,58 @@
-
+h1,
+h2,
+h3,
+p {
+margin-top: 0;
+margin-bottom: 0;
+}
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+img{
+    display: block;
+}
+button{
+    cursor: pointer;
+}
 .list {
     list-style: none; 
 }
 .link {
     text-decoration: none;
 }
-/* --------LOGORYP--------- */
-.font{
-    font-family: 'Roboto';
+body{
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    letter-spacing: 0.03em;
     color: #000;
 }
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.page-header-container{
+    display: flex;
+    align-items: center;
+}
+/* --------LOGORYP--------- */
 .logotyp {
     font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-        /* identical to box height */
-        letter-spacing: 0.03em;
-        color: #000;}
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    /* identical to box height */
+    letter-spacing: 0.03em;
+    color: #000;
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;}
 .part-logo{
     font-family: 'Raleway';
     font-style: normal;
@@ -28,13 +62,14 @@
     /* identical to box height */
     letter-spacing: 0.03em;
     color: #2196F3;
-        }
+}
         /* ---------NAVIGATION--- -- */
+.menu-item:not(:last-child) {
+   margin-right: 50px ;
+}
 .menu-link {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: #212121;
@@ -43,7 +78,6 @@
 .menu-link:focus{
         font-style: normal;
         font-weight: 500;
-        font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: #2196F3;
@@ -51,192 +85,264 @@
 .contact{
         font-style: normal;
         font-weight: 500;
-        font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: #757575;
+        margin-left: auto;
+        margin-right: 50px;
 }
 .contact:hover,
 .contact:focus{
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: #2196F3;
 }
 .hero{
-background: #2F303A;
+    width: 1200;
+        /* margin-left: auto;
+        margin-right: auto; */
+        padding-top: 200px;
+        padding-bottom: 280px;
+        /* padding-left: 15px;
+        padding-right: 15px; */
+    background: #2F303A;
+    text-align: center;
+    /* text-transform: uppercase; */
+    letter-spacing: 0.6em;
+    font-weight: 900;
+    font-size: 44px;
 }
 /* -------- HERO ----------- */
 .main-title{
-    font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
-        /* or 136% */
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        background: #2F303A;
+    /* font-style: normal; */
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #2F303A;  
+    width: 1200;
+    margin-left: 289px;
+    margin-right: 289px;
+    text-align: center;
+    /* margin-left: auto;
+    margin-right: auto; */
+    padding-left: 15;
+    padding-right: 15;
 }
 .modal-btn{
-    font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        /* identical to box height, or 188% */
-        display: flex;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.06em;
-        color: #FFFFFF;
-        background: #2196F3;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 32px;
+    padding-right: 32px;
+    margin-top: 30px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 .modal-btn:hover,
 .modal-btn:focus{
     background: #188CE8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
+}
+.details{
+    display: flex;
+}
+.points{
+    padding-top: 94px;
+}
+.description{
+padding-top: 10px;
+margin-right: 30px;
+}
+.our-team{
+    padding-top: 94px;
+    margin-bottom: 50px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;     
+}
+h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    padding-top: 94px;
+    padding-bottom: 50px;
+}
+.images {
+    /* margin-right: 30px; */
+    display: flex;
+    /* width: 370px;
+    height: 294px; */
+    /* left: 215px; */
+    margin-bottom: 94px;
+}
+.images-indent{
+    margin-right: 30px;
+}
+.team {
+display: flex;
+}
+.card{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    margin-right: 30px;
+    margin-bottom: 94px;
+}
+.name {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    /* identical to box height */
+    text-align: center;
+    color: #212121;
+}
+.job {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    padding-bottom: 30px;
+    /* identical to box height */
+    text-align: center;
+    color: #757575;
+}
+.team-background{
+    background: #F5F4FA;
+}
+.footer{
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .contact-footer{
     font-style: normal;
         font-weight: 400;
-        font-size: 14px;
         line-height: 1.71;
         /* or 171% */
-        letter-spacing: 0.03em;
-        color: rgba(255, 255, 255, 0.6);
+        color: rgba(255, 255, 255, 0.6);       
 }
 .contact-footer:hover,
-.contact-footer:focus{
+.contact-footer:focus
+{
     color: #2196F3;
 }
-
 /* ---------- DESCRIPTION ------ -- */
-
-.modal-btn-portfolio{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-      /* identical to box height, or 162% */
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #212121;
-    background: #F5F4FA;
-    border-radius: 4px;    
-}
-
-.modal-btn-portfolio:hover,
-.modal-btn-portfolio:focus{
-    
-    color: #FFFFFF;
-    background: #2196F3;}
-
 .points{
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #212121;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: #212121;
 }
   .description{
     font-style: normal;
     font-weight: 400;
-    font-size: 1.71;
     line-height: 24px;
     /* or 171% */
-    letter-spacing: 0.03em;
     color: #757575;
   }
   .services{
-        font-style: normal;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.17;
-       /* text-align: center;*/
-        letter-spacing: 0.03em;
-        color: #212121;
-  }
-  /* -- -------TEAM------- -- */
-  .team{
-        font-style: normal;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.17;
-        /* text-align: center; */
-        letter-spacing: 0.03em;
-        color: #212121;
-  }
-  .name{
-        font-style: normal;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.19;
-            /* identical to box height */
-            text-align: center;
-            letter-spacing: 0.03em;
-            color: #212121;
-  }
-  .job{
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.19;
-        /* identical to box height */
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: #757575;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+   /* text-align: center;*/
+    color: #212121;
   }
   /* -- ------FOOTER----- -- */
   .footer{
     background: #2F303A;
   }
   .logotyp-footer{
-font-family: 'Raleway';
+    font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     /* identical to box height */
-    letter-spacing: 0.03em;
     color: #FFFFFF;
+    margin-bottom: 20px;
   }
   .part-logo{
     font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19px;
-        /* identical to box height */
-        letter-spacing: 0.03em;
-        color: #2196F3;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19px;
+    /* identical to box height */
+    color: #2196F3;
   }
   .address{
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        /* or 171% */
-        letter-spacing: 0.03em;
-        color: #FFFFFF;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    color: #FFFFFF;
   }
   
   /* ============СТИЛИ ДЛЯ ПОРТФОЛИО========== */
+ 
+  
+  .buttons-container{
+    display: flex;
+    justify-content: center; 
+  }
+  .buttons-location:not(:last-child){
+    /* margin-top: 94px;
+    margin-bottom: 50px; */
+    margin-right: 8px;
+  }
+  .modal-btn-portfolio {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.63;
+    /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
+        border-radius: 4px;
+        margin-top: 94px;
+        margin-bottom: 50px;
+  }
+  .modal-btn-portfolio:hover,
+  .modal-btn-portfolio:focus {
+      color: #FFFFFF;
+      background: #2196F3;
+  }
+  .list-menu:not(:nth-child(3n)){
+    margin-right: 30px;
+  }
   .menu-portfolio{
+        display: flex;
+        flex-wrap: wrap;
     /* position: absolute;
         width: 370px;
         height: 294px;
         left: 215px;
         top: 262px; */
         background: white;
+        /* border: 1px solid #EEEEEE; */
+  }
+  .menu-card{
+    box-sizing: border-box;
+        /* position: absolute;
+        width: 370px;
+        height: 404px;
+        left: 615px;
+        top: 1130px;
+        background: #FFFFFF; */
+        border: 1px solid #EEEEEE;
+        margin-bottom: 30px;
   }
   .service-name{
         font-style: normal;
@@ -246,6 +352,9 @@ font-family: 'Raleway';
         /* identical to box height, or 200% */
         letter-spacing: 0.06em;
         color: #212121;
+        margin-top: 20px;
+        margin-bottom: 4px;
+        margin-left: 24px;
   }
   .direction{
             font-style: normal;
@@ -253,5 +362,8 @@ font-family: 'Raleway';
             font-size: 16px;
             line-height: 1.88;
             /* identical to box height, or 188% */
-            letter-spacing: 0.03em;
-            color: #757575;}
+            color: #757575;
+            margin-bottom: 20px;
+            margin-left: 24px;
+        }
+            
