--- a/css/styles.css
+++ b/css/styles.css
@@ -101,15 +101,10 @@ body{
 }
 .hero{
     width: 1200;
-        /* margin-left: auto;
-        margin-right: auto; */
-        padding-top: 200px;
-        padding-bottom: 280px;
-        /* padding-left: 15px;
-        padding-right: 15px; */
+    padding-top: 200px;
+    padding-bottom: 200px;
     background: #2F303A;
     text-align: center;
-    /* text-transform: uppercase; */
     letter-spacing: 0.6em;
     font-weight: 900;
     font-size: 44px;
@@ -148,9 +143,19 @@ body{
 .modal-btn:focus{
     background: #188CE8;
 }
-.details{
-    display: flex;
+.details{  
     padding-top: 94px;
+}
+.location-details{
+display: flex;
+}
+h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: #212121;
 }
 .description{
 padding-top: 10px;
@@ -192,6 +197,10 @@ h2 {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     margin-right: 30px;
+}
+.location-card{
+   padding-top: 30px; 
+   padding-bottom: 30px;
 }
 .name {
     font-style: normal;
@@ -297,6 +306,10 @@ h2 {
   .buttons-container{
     display: flex;
     justify-content: center; 
+    padding-top: 6px;
+    padding-right: 22px;
+    padding-bottom: 6px;
+    padding-left: 22px;
     margin-bottom: 50px;
   }
   .buttons-location:not(:last-child){
@@ -320,7 +333,7 @@ h2 {
   .menu-portfolio{
         display: flex;
         flex-wrap: wrap;
-        background: white;    
+        background: white; 
   }
   .name-card{
     padding-top: 20px;
@@ -331,6 +344,10 @@ h2 {
   .menu-card{
     box-sizing: border-box;
     border: 1px solid #EEEEEE;
+    
+  }
+  .indent{
+    margin-bottom: 30px;
   }
   .service-name{
         font-style: normal;
