--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ body{
 .location-details{
 display: flex;
 }
-h3{
+.uppercase{
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -198,9 +198,12 @@ h2 {
     border-radius: 0px 0px 4px 4px;
     margin-right: 30px;
 }
-.location-card{
-   padding-top: 30px; 
-   padding-bottom: 30px;
+.h-card {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    color: #212121;
 }
 .name {
     font-style: normal;
@@ -209,7 +212,6 @@ h2 {
     line-height: 1.19;
     padding-top: 30px;
     padding-bottom: 10px;
-    /* identical to box height */
     text-align: center;
     color: #212121;
 }
@@ -306,21 +308,26 @@ h2 {
   .buttons-container{
     display: flex;
     justify-content: center; 
-    padding-top: 6px;
+    /* padding-top: 6px;
     padding-right: 22px;
     padding-bottom: 6px;
-    padding-left: 22px;
+    padding-left: 22px; */
     margin-bottom: 50px;
   }
   .buttons-location:not(:last-child){
-    margin-right: 8px;
+    margin-right: 8px
   }
+  
   .modal-btn-portfolio {
       font-weight: 500;
       font-size: 16px;
       line-height: 1.63;
     /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
-        border-radius: 4px;
+      border-radius: 4px;
+      padding-top: 6px;
+      padding-right: 22px;
+      padding-bottom: 6px;
+      padding-left: 22px;
   }
   .modal-btn-portfolio:hover,
   .modal-btn-portfolio:focus {
