--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 h1,
 h2,
 h3,
+h4,
 p {
 margin-top: 0;
 margin-bottom: 0;
@@ -47,7 +48,6 @@ body{
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    /* identical to box height */
     letter-spacing: 0.03em;
     color: #000;
     margin-right: 93px;
@@ -59,7 +59,6 @@ body{
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    /* identical to box height */
     letter-spacing: 0.03em;
     color: #2196F3;
 }
@@ -88,6 +87,7 @@ body{
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: #757575;
+        padding-left: 10px;
         margin-left: auto;
         margin-right: 50px;
 }
@@ -99,15 +99,20 @@ body{
     letter-spacing: 0.02em;
     color: #2196F3;
 }
+.contact {
+    fill: currentColor;
+}
 .hero{
     width: 1200;
     padding-top: 200px;
     padding-bottom: 200px;
-    background: #2F303A;
     text-align: center;
     letter-spacing: 0.6em;
     font-weight: 900;
     font-size: 44px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),  url("../images/hero/Img.png");
+    background-size: cover;
+    /* background: #C4C4C4; */
 }
 /* -------- HERO ----------- */
 .main-title{
@@ -117,7 +122,6 @@ body{
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
-    background: #2F303A;  
     width: 1200;
     text-align: center;
     margin-left: auto;
@@ -156,10 +160,22 @@ display: flex;
     line-height: 1.14;
     text-transform: uppercase;
     color: #212121;
+    padding-top: 30px;
 }
 .description{
 padding-top: 10px;
 margin-right: 30px;
+}
+.rectangle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+    height: 120px;
+    left: 215px;
+    top: 774px;
+    background: #F5F4FA;
+    border-radius: 4px;
 }
 .services{
     padding-top: 94px;
@@ -193,10 +209,37 @@ h2 {
 .team {
     display: flex;
 }
+.socail-list-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background: #FFFFFF; 
+}
+.socail-list-link:hover,
+.socail-list-link:focus{
+     background: #2196F3;
+}
+.socail-list-link:hover .socail-list-icon,
+.socail-list-link:focus .socail-list-icon{
+    fill: #FFFFFF;
+}
+.socail-list{
+display: flex;
+justify-content: center;
+gap: 10px;
+padding-bottom: 30px;
+}
+.socail-list-icon {
+    fill: #afb1b8
+}
 .card{
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     margin-right: 30px;
+    background: #FFFFFF;
 }
 .h-card {
     font-style: normal;
@@ -220,11 +263,12 @@ h2 {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
-    padding-bottom: 30px;
+    padding-bottom: 16px;
     /* identical to box height */
     text-align: center;
     color: #757575;
 }
+
 /* ---------- DESCRIPTION ------ -- */
 .points{
     font-style: normal;
@@ -237,7 +281,6 @@ h2 {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* or 171% */
     color: #757575;
   }
   .services{
@@ -245,9 +288,45 @@ h2 {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
-   /* text-align: center;*/
     color: #212121;
   }
+  .clients{ 
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    color: #212121;
+    padding-top: 94px;
+    padding-bottom: 50px;
+  }
+  .menu-client:not(:last-child) {
+      margin-right: 30px;
+  }
+  .clients-icon-location{
+    display: flex;
+    padding-bottom: 94px;
+    color: #AFB1B8;
+  }
+  .clients-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+} 
+.clients-icon{
+    fill: currentColor;
+}
+  .clients-icon:hover,
+  .clients-icon:focus{
+    color: #2196F3;
+    border: 1px solid#2196F3;
+  }
+
+
   /* -- ------FOOTER----- -- */
  
   .footer{
@@ -255,13 +334,15 @@ h2 {
     padding-top: 60px;
     padding-bottom: 60px;
   }
+  .location-footer{
+    display: flex;
+  }
   .logotyp-footer{
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    /* identical to box height */
     color: #FFFFFF;
   }
   .part-logo{
@@ -270,7 +351,6 @@ h2 {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19px;
-    /* identical to box height */
     color: #2196F3;
   }
   .address{
@@ -283,11 +363,11 @@ h2 {
     margin-top: 20px;
   }
   .contact-footer{
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 24px;
-        color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.6);
   }
   .location-contact{
     margin-top: 9px;
@@ -295,6 +375,44 @@ h2 {
    .contact-footer:hover,
    .contact-footer:focus {
     color: #2196F3;
+   }
+   .location-footer-media {
+       display: flex;
+       align-items: center;
+       padding-top: 12px;
+    padding-left: 70px;
+   }
+   .media { 
+       font-weight: 700;
+       font-size: 14px;
+       line-height: 1.14;
+       text-transform: uppercase;
+       color: #FFFFFF; 
+   }
+   .media-footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        color: #FFFFFF;
+        background:rgba(255, 255, 255, 0.1);
+   }
+   .media-footer{
+        fill: currentColor;
+    }
+   .icon-list-footer {
+       display: flex;
+       padding-top: 20px;
+       gap: 10px;
+   }
+   .media-footer:hover,
+   .media-footer:focus{
+   background: #2196F3;
+}
+   .footer-icon {
+      display: block;
    }
   
   /* ============СТИЛИ ДЛЯ ПОРТФОЛИО========== */
@@ -308,10 +426,6 @@ h2 {
   .buttons-container{
     display: flex;
     justify-content: center; 
-    /* padding-top: 6px;
-    padding-right: 22px;
-    padding-bottom: 6px;
-    padding-left: 22px; */
     margin-bottom: 50px;
   }
   .buttons-location:not(:last-child){
@@ -348,8 +462,15 @@ h2 {
     padding-left: 20px;
   }
   .menu-card{
-    box-sizing: border-box;
+    background: #FFFFFF;
     border: 1px solid #EEEEEE;
+  }
+  .menu-card:hover,
+  .menu-card:focus
+  {
+    
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
   .indent{
     margin-bottom: 30px;
@@ -369,4 +490,4 @@ h2 {
         line-height: 1.88;
         color: #757575;
         }
-            
+  
