--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,11 @@ body{
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #000;
+    color: #2196F3;
     margin-right: 93px;
     padding-top: 24px;
-    padding-bottom: 25px;}
+    padding-bottom: 25px;
+  }
 .part-logo{
     font-family: 'Raleway';
     font-style: normal;
@@ -65,7 +66,7 @@ body{
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #2196F3;
+    color: #000000;
 }
         /* ---------NAVIGATION--- -- */
 .menu-link:not(:last-child),
@@ -96,7 +97,7 @@ body{
   color: var(--secondary-text-color);
 }
 .menu-item{
-color: #757575;
+color: #212121;
 }
 .menu-link:hover,
 .menu-link:focus{
@@ -151,6 +152,7 @@ color: #757575;
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border:#2196F3;
 }
 .modal-btn:hover,
 .modal-btn:focus{
@@ -362,7 +364,7 @@ padding-bottom: 30px;
     line-height: 1.19;
     color: #FFFFFF;
   }
-  .part-logo{
+  .part-logo-footer{
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -423,6 +425,9 @@ padding-bottom: 30px;
        display: flex;
        padding-top: 20px;
        gap: 10px;
+       display: flex;
+       justify-content: center;
+       align-items: center;
    }
    .media-footer:hover,
    .media-footer:focus{
@@ -435,9 +440,6 @@ padding-bottom: 30px;
   /* ============СТИЛИ ДЛЯ ПОРТФОЛИО========== */
  
  .portfolio-line{
-  /* width: 1600px; */
-    /* height: 0px;
-    left: 0px; */
     top: 80px;
     border-bottom: 1px solid #ECECEC;
  }
