--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ body{
     align-items: center;
     justify-content: space-between;
 }
+
 /* --------LOGORYP--------- */
 .logotyp {
     font-family: 'Raleway';
@@ -73,12 +74,24 @@ body{
 .menu-item:not(:last-child) {
    margin-right: 50px ;
 }
+.current::after{
+  position: absolute;
+  content: '';
+    border-radius: 2px;
+    width: 48px;
+    height: 4px;
+    top: 76px;
+    background: #2196F3;
+    border-radius: 2px;
+    transition: background-color var(--transition-knob-color) ;
+}
 .page-nav{
   display: flex;
 }
 .menu-link-icon{
   margin-right: 10px;
   fill: currentColor;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-link {
     display: flex;
@@ -88,13 +101,11 @@ body{
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--primery-text-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu{
   display: flex;
   align-items: center;
-}
-.menu{
-  color: var(--secondary-text-color);
 }
 .menu-item{
 color: #212121;
@@ -152,8 +163,9 @@ color: #212121;
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    border:#2196F3;
-}
+    border: 1px solid transparent;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 .modal-btn:hover,
 .modal-btn:focus{
     background: #188CE8;
@@ -208,13 +220,46 @@ h2 {
     margin-bottom: 50px;
 }
 .images {
-    display: flex;  
+    display: flex; 
+    flex-wrap: wrap;
+      /* margin-right: calc(-1 * var(--standard-clearance));
+      margin-bottom: calc(-1 * var(--standard-clearance)); */
 }
-.images-indent{
+.images-indent:not(:nth-child(3n)){
     margin-right: 30px;
 }
 .team-background {
     background: #F5F4FA;
+}
+.skill-description{
+  height: 70px;
+  top:-70px;
+  bottom: 0;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 27px;
+  background: rgba(47, 48, 58, 0.8);
+  width: 100%;
+  left: 0;
+  position: relative;
+    overflow: hidden;
+}
+.content-box{
+  font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF; 
+}
+.location-label{
+    display: block;
+    width: 370px;
+    height: 294px;
+    left: 215px;
+    top: 1208px;
 }
 .our-team {
     padding-top: 94px;
@@ -236,14 +281,15 @@ h2 {
     height: 44px;
     border-radius: 50%;
     background: #FFFFFF; 
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socail-list-link:hover,
-.socail-list-link:focus{
-     background: #2196F3;
+.socail-list-link:focus {
+  background: #2196F3;
 }
 .socail-list-link:hover .socail-list-icon,
 .socail-list-link:focus .socail-list-icon{
-    fill: #FFFFFF;
+      fill: #FFFFFF;
 }
 .socail-list{
 display: flex;
@@ -252,7 +298,8 @@ gap: 10px;
 padding-bottom: 30px;
 }
 .socail-list-icon {
-    fill: #afb1b8
+    fill: #afb1b8;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card{
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -309,7 +356,7 @@ padding-bottom: 30px;
     line-height: 1.17;
     color: #212121;
   }
-  /* --------------------------------------------------------- */
+  /* ---------------------ПОСТОЯННЫЕ КЛИЕНТЫ------------------------------------ */
   .clients{ 
     font-style: normal;
     font-weight: 700;
@@ -326,8 +373,9 @@ padding-bottom: 30px;
   .clients-icon-location{
     display: flex;
     padding-bottom: 94px;
+    
   }
-  .clients-icon{
+  .clients-link{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -336,16 +384,20 @@ padding-bottom: 30px;
     color: #AFB1B8;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 } 
-  .clients-icon:hover,
-  .clients-icon:focus{
+  .clients-link:hover,
+  .clients-link:focus{
     color: #2196F3;
     border: 1px solid #2196F3;
     border-radius: 4px;
   }
-  .clients-icon {
-    fill: currentColor;
+  .clients-link {
+    fill: currentColor; 
     }
+    /* .clients-icon{
+      transition: fill 2500ms;
+    } */
   /* -- ------FOOTER----- -- */
  
   .footer{
@@ -387,6 +439,7 @@ padding-bottom: 30px;
     font-size: 14px;
     line-height: 24px;
     color: rgba(255, 255, 255, 0.6);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .location-contact{
     margin-top: 9px;
@@ -417,6 +470,7 @@ padding-bottom: 30px;
         border-radius: 50%;
         color: #FFFFFF;
         background:rgba(255, 255, 255, 0.1);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
    .media-footer{
         fill: currentColor;
@@ -439,6 +493,17 @@ padding-bottom: 30px;
   
   /* ============СТИЛИ ДЛЯ ПОРТФОЛИО========== */
  
+    .current-portfolio::after {
+       position: absolute;
+      content: '';
+      border-radius: 2px;
+      width: 78px;
+      height: 4px;
+      top: 76px;
+      background: #2196F3;
+      border-radius: 2px;
+      transition: background-color var(--transition-knob-color);
+    }
  .portfolio-line{
     top: 80px;
     border-bottom: 1px solid #ECECEC;
@@ -466,6 +531,7 @@ padding-bottom: 30px;
       padding-left: 22px;
       background: #F5F4FA;
       border: 1px solid#F5F4FA;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .modal-btn-portfolio:hover,
   .modal-btn-portfolio:focus {
@@ -477,6 +543,39 @@ padding-bottom: 30px;
   }
   .list-menu:not(:nth-child(3n)){
     margin-right: 27px;
+  }
+  .overlay{
+    font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+      /* or 156% */
+      position: absolute;
+        width: 100%;
+        height: 100%;
+        left:0;
+        top: 0;
+        padding-top: 63px;
+        padding-bottom: 63px;
+        padding-left: 24px;
+        padding-right: 24px;
+      color: #FFFFFF;
+      background: rgba(33, 150, 243, 0.9);
+      /* overflow-y: scroll; */
+      transform: translate(0, 100%);
+      transition: transform 500ms linear;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .team-list-link-wrapper{
+   display: block;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .team-list-img-wraper{
+    position: relative;
+    overflow: hidden;
+  }
+    .team-list-link-wrapper:hover .overlay,
+    .team-list-link-wrapper:focus .overlay{
+transform: translate(0, 0);
   }
   .menu-portfolio{
         display: flex;
@@ -492,6 +591,7 @@ padding-bottom: 30px;
   .menu-card{
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .menu-card:hover,
   .menu-card:focus
@@ -517,4 +617,61 @@ padding-bottom: 30px;
         line-height: 1.88;
         color: #757575;
         }
+        /* ------------------MODAL WINDOW------------------ */
+ .backdrop{
+position: fixed;
+top: 0;
+left: 0;
+z-index: 100;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.2);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
+.backdrop.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: #FFFFFF;
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px; */
+}   
+.modal-close-btn-icon{
+  position: absolute;
+  display: flex;
+    top: 10px;
+    right: 10px;
+    width: 18px;
+    height: 18px;
+}
+.modal-close-btn{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus{
+  border-color: var(--accent-color);
+}
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon{
+  fill: var(--accent-color);
+}
   
