--- a/css/styles.css
+++ b/css/styles.css
@@ -589,9 +589,9 @@ transform: translate(0, 0);
     padding-left: 20px;
   }
   .menu-card{
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    flex-basis: calc((100% - 2 * 30px) / 3);
+      background: #FFFFFF;
+      border: 1px solid #EEEEEE;
   }
   .menu-card:hover,
   .menu-card:focus
